# harpy

./: .gitmodules  CMakeLists.txt  Makefile  README.md  tags
demos/: README.md
demos/PAPER-1/01-COLD-SPHERE/: Makefile
demos/PAPER-1/04-FULL-MODEL/: Makefile
demos/UNIT-TEST/01-TIMESTEP/: Makefile  timestep-main.cpp
demos/UNIT-TEST/02-BCCONFIG/: Makefile  bcconfig-main.cpp  config.json  model
demos/UNIT-TEST/03-MATERIAL-SETUP/: Makefile  config.json  main.cpp
demos/UNIT-TEST/04-PARAM-INTERPOLATOR/: Makefile  POR  QUERY  config.json  main.cpp
demos/UNIT-TEST/05-MODEL-CONFIG/: Makefile  main.cpp
demos/UNIT-TEST/06-VISCOPLASTIC/: Makefile  main.cpp
demos/UNIT-TEST/07-JACOBIAN-AUTODIFF/: Makefile  autodiff-jac  autodiff-jac.cpp  config.json
demos/UNIT-TEST/08-MAP-MPI-LOCALIZE/: Makefile  map-mpi-localize.cpp
demos/UNIT-TEST/09-TEMPLATED-NAMESPACES/: Makefile  templated-namespaces.cpp
demos/UNIT-TEST/10-RADIAL-TEMPERATURE/: Makefile  main.cpp
demos/UNIT-TEST/11-NETCDF/: .main.cpp.swp  Makefile  main.cpp  test.py
demos/UNIT-TEST/12-TEMPORAL-BC/: Makefile  example_data.nc  main.cpp
demos/VALIDATE/01-POIATE/: Makefile  Makefile.batch
demos/VALIDATE/02-SPHERE/: lin_0.csv
demos/VALIDATE/03-SPHERE-SS/: lin_0.csv
demos/VALIDATE/04-SPHERE-SS-BC_SIG0/: Makefile
demos/VALIDATE/05-RADIAL-TEMP/: Makefile
demos/VALIDATE/06-RADIAL-TEMP/: Makefile
demos/VALIDATE/07-DUAL-MATERIAL/: Makefile
demos/VALIDATE/08-DUAL-MATERIAL-NOCREEP/: Makefile
demos/VALIDATE/11-TEST-PROBES/: Makefile
demos/VALIDATE/13-MODEL-ANALYSE/: Makefile
demos/VALIDATE/14-FULL-MODEL-ANALYSE/: Makefile
demos/VALIDATE/14-FULL-MODEL-ANALYSE-NOCREEP/: Makefile
demos/VALIDATE/14-FULL-MODEL-ANALYSE-NOPRESSURESOLUTION/: Makefile
demos/VALIDATE/14-FULL-MODEL-INIT/: Makefile
demos/VALIDATE/15-ENRICHED-GALERKIN/: Makefile
demos/VALIDATE/17-LABTEST/: Makefile  bc-time.csv
demos/VALIDATE/py/: netcdf.py  plot_cd1.py  plot_cdf.py  plot_sphere.py  run_atena.sh  s3.py  s3_helpers.py  s3_prof.py  subsample.py  timestr.py
doc/: Description.md  Makefile  Workspaces.md  ref.bib
doc/2phaseflow-formulation/: main.tex
doc/formulation/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.run.xml  main.tex
doc/thm-contraction/: main.tex
include/: README.md
include/base/: Assert.h  Global.h  HarpyInit.h  Log.h  PetscLogger.h
include/config/: BCConfig.h  Config.h  ConfigValidate.h  InoutConfig.h  MaterialConfig.h  MeshConfig.h  ModelConfig.h  ModelReader.h  ReaderRegex.h  SolverConfig.h  SystemConfig.h  SystemReader.h  TimeloopConfig.h  TimestepConfig.h
include/config/reader/: InoutReader.h  MaterialReader.h  ModelReader.h  ReaderRegex.h  SolverReader.h  SpatialDataReader.h  SystemReader.h
include/harpy/: Assert.h  Coupler.h  DirManager.h  Enums.h  ExplicitMaterial.h  Global.h  HarpyInit.h  Log.h  Material.h  MeshInit.h  PetscLogger.h  Restart.h  Solver.h  Solverloop.h  Timeloop.h  Timestep.h
include/material/: InitVPPropsByElemMap.h  ProbeIFC.h  StressMaterial.h  ThermalIFC.h  ThermalMaterial.h  VPProps.h  ViscoPlasticMaterial.h  ViscoplasticIFC.h
include/postproc/: Probe.h  Report.h  StressPostProc.h  TensorInvariants.h  ThermalPostProc.h  ViscoplasticReport.h
include/postproc/probes/: Probe.h
include/postproc/report/: Report.h  VPReport.h
include/postproc/stress/: StressPostProc.h  TensorInvariants.h
include/restart/: File.h  Header.h  Util.h
include/solver/: BC.h  ElemProjection.h  PressureSolverFromFile.h  SolverStress.h  SolverTHM.h  SolverThermalExplicit.h  SolverViscoplasticTrial.h  ThermalSolverConstant.h  ThermalSolverExplicit.h  ThermalSolverFromFile.h  ViscoplasticSolver.h
include/solver/common/: ExplicitMaterial.h  Solver.h  SolverFactory.h  TemporalBC.h
include/solver/pressure/: PSolverFile.h
include/solverloop/: SLViscoplastic.h  Solverloop.h  SolverloopBasic.h  SolverloopTHM.h
include/timeloop/: Timeloop.h  Timestep.h
include/util/: Autodiff.h  CSVLine.h  CsvFile.h  DirManager.h  File.h  Grid3D.h  GridFile.h  GridRadialFile.h  GzStream.h  Json.h  MeshUtils.h  Messages.h  MpiFileOps.h  NetCDFWriter.h  OutputOperators.h  Serialize.h  Stopwatch.h  String.h  TeeBuff.h  TermColors.h  TimeTable.h
share/_temp/: code.tmp
share/container/: Dockerfile  Makefile  Makefile.cmake  Makefile.download  Makefile.gmsh  Makefile.hdf5  Makefile.libmesh  Makefile.netcdf  Makefile.paraview  Makefile.petsc  Makefile.vtk  README.md  harpy.py  lm23_ub24.py  storage.config.conf  ttf-vista-fonts-installer.sh
share/etc/: grammar.json
share/makefile/: Makefile.demos
share/thm-container/: Dockerfile  Makefile
src/base/: Global.cpp  HarpyInit.cpp  Log.cpp  PetscLogger.cpp
src/config/: BCConfig.cpp  Config.cpp  ConfigValidate.cpp  InoutConfig.cpp  MaterialConfig.cpp  MeshConfig.cpp  ModelConfig.cpp  ModelReader.cpp  SolverConfig.cpp  SystemConfig.cpp  SystemReader.cpp  TimeloopConfig.cpp
src/harpy/: Coupler.cpp  DirManager.cpp  ExplicitMaterial.cpp  Global.cpp  HarpyInit.cpp  Log.cpp  Material.cpp  MeshInit.cpp  PetscLogger.cpp  Restart.cpp  Solver.cpp  Timeloop.cpp  Timestep.cpp
src/main/: harpy.cpp  msh2exo.cpp
src/material/: InitVPPropsByElemMap.cpp  ProbeIFC.cpp  StressMaterial.cpp  ThermalIFC.cpp  ThermalMaterial.cpp  VPProps.cpp  ViscoPlasticMaterial.cpp  ViscoplasticIFC.cpp
src/postproc/: Probe.cpp  Report.cpp  StressPostProc.cpp  TensorInvariants.cpp  ThermalPostProc.cpp  ViscoplasticReport.cpp
src/restart/: File.cpp  Header.cpp  Util.cpp
src/solver/: BC.cpp  ElemProjection.cpp  PressureSolverFromFile.cpp  SolverStress.cpp  SolverTHM.cpp  SolverThermalExplicit.cpp  SolverViscoplasticTrial.cpp  ThermalSolverConstant.cpp  ThermalSolverExplicit.cpp  ThermalSolverFromFile.cpp  ViscoplasticSolver.cpp
src/solverloop/: SLViscoplastic.cpp  SolverloopTHM.cpp
src/timeloop/: Timeloop.cpp  Timestep.cpp
src/util/: DirManager.cpp  Grid3D.cpp  GridFile.cpp  GridRadialFile.cpp  Json.cpp  MeshUtils.cpp  Messages.cpp  NetCDFWriter.cpp  OutputOperators.cpp  SpatialDataReader.cpp  Stopwatch.cpp  TeeBuff.cpp  TimeTable.cpp
(+238 files in other folders)
